--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anuj Singh</title>
+    <title>Anuj Singh _  IIP</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,14 +28,14 @@
         <section class="hero">
             <div class="hero-content">
                 <h1 class="reveal">Designer & Developer</h1>
-                <p class="reveal">Crafting digital experiences and packaging solutions with precision and passion.</p>
+                <p class="reveal">Learning by doing. Crafting Packaging Solutions with precision and passion.</p>
             </div>
         </section>
 
         <section id="about" class="content-section">
             <h2 class="reveal">"I have made projects for the fun of it"</h2>
             <p class="reveal">
-                Creativity, for me, isn't just a profession—it's a compulsion. I thrive on bringing ideas to life, whether through the structured logic of code or the visual language of design. This portfolio is a curated collection of my work, born from both professional commissions and personal curiosity.
+                Creativity, for me, isn't just a profession—it's a compulsion. I thrive on bringing ideas to life, whether through the structured logic of code or the visual language of design. This portfolio is a curated collection of my work. Do have a look :)
             </p>
         </section>
 
@@ -74,12 +74,12 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item reveal">
                     <h3>Web Projects</h3>
-                    <p>A collection of my web development projects, showcasing my skills in creating dynamic and user-friendly digital experiences.</p>
+                    <p>A collection of my web projects, showcasing my skills in creating dynamic and user-friendly experiences.</p>
                     <a href="#" class="btn">View Projects</a>
                 </div>
                 <div class="portfolio-item reveal">
                     <h3>CAD Designs</h3>
-                    <p>A selection of my detailed CAD designs, demonstrating precision, creativity, and technical expertise in packaging solutions.</p>
+                    <p>A selection of my CAD designs, demonstrating precision, creativity, and technical expertise in packaging solutions.</p>
                     <a href="#" class="btn">View Designs</a>
                 </div>
             </div>
@@ -94,7 +94,7 @@
     </main>
 
     <footer class="main-footer">
-        <p>&copy; 2024 Anuj Singh. All Rights Reserved.</p>
+        <p>&copy; OH. YOU> HAVE. REACHED. THE . END. (2024 Anuj Singh)</p>
     </footer>
 
 <script type="module" src="/index.tsx"></script>
