--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="reveal">Designer & Developer</h1>
-                <p class="reveal">Crafting digital experiences and packaging solutions with precision and passion.</p>
+                <h2 class="reveal">Packaging Technologist with a hint of Tech and Design</h2>
+                <p class="reveal">Crafting Packaging solutions with precision and passion.</p>
             </div>
         </section>
 
         <section id="about" class="content-section">
-            <h2 class="reveal">"I have made projects for the fun of it"</h2>
+            <h3 class="reveal">"I have made projects for the fun of it"</h3>
             <p class="reveal">
-                Creativity, for me, isn't just a profession—it's a compulsion. I thrive on bringing ideas to life, whether through the structured logic of code or the visual language of design. This portfolio is a curated collection of my work, born from both professional commissions and personal curiosity.
+                Creativity, for me, isn't just a profession—it's a compulsion. I thrive on bringing ideas to life, whether through the structured logic of code or the visual language of design.
             </p>
         </section>
 
@@ -74,18 +74,22 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item reveal">
                     <h3>AutoCAD Designs</h3>
-                    <p>A selection of my detailed AutoCAD designs, demonstrating precision, creativity, and technical expertise in packaging solutions.</p>
+                    <p>A selection of my detailed AutoCAD designs, demonstrating creativity, and technical expertise in packaging solutions.</p>
                     <a href="#" class="btn">View Designs</a>
                 </div>
                 <div class="portfolio-item reveal">
-                    <h3>Megh - Web Game</h3>
-                    <p>An interactive web-based game built for fun, showcasing creative gameplay and modern web technologies.</p>
+                    <h3>Megh - Wordle like — maze puzzle with an endless twist.</h3>
+                    <p>This was a hobby project purely made to learn:
+• Researching and implementing the game's core and features based on the target audience, market size.
+• Designing the visuals and game behaviour of the game itself. Enhancing user experience with subtle but smooth and integrated quality of life additions.
+• Using colors and audio to evoke happy chemicals and adrenaline thereby creating an environment of both the places where users can play the game for stress relief or in a highly engaging & dopamine inducing game.
+• Adding visual and audio cues for the user as a means of feedback thereby tricking the brain to play for longer.</p>
                     <a href="#" class="btn">Play Game</a>
                 </div>
                 <div class="portfolio-item reveal">
-                    <h3>Web Projects/Visualizations</h3>
-                    <p>A collection of my web development projects and data visualizations, showcasing skills in creating dynamic and user-friendly digital experiences.</p>
-                    <a href="#" class="btn">View Projects</a>
+                    <h3>Visualizations</h3>
+                    <p>A collection of my Math, Physics visualizations from Undergraduate , showcasing skills in creating dynamic and user-friendly experiences.</p>
+                    <a href="#" class="btn">View list of visualizations</a>
                 </div>
             </div>
         </section>
@@ -99,7 +103,7 @@
     </main>
 
     <footer class="main-footer">
-        <p>&copy; 2024 Anuj Singh. All Rights Reserved.</p>
+        <p>&copy; HEY. IT. LOOKS. LIKE. YOU. HAVE. REACHED. THE. END. :)</p>
     </footer>
 
 <script type="module" src="/index.tsx"></script>
