--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@
                 </div>
                 <div class="portfolio-item reveal">
                     <h3>Megh - Wordle like — maze puzzle with an endless twist.</h3>
-                    <p>This was a hobby project purely made to learn:
-• Researching and implementing the game's core and features based on the target audience, market size.
-• Designing the visuals and game behaviour of the game itself. Enhancing user experience with subtle but smooth and integrated quality of life additions.
-• Using colors and audio to evoke happy chemicals and adrenaline thereby creating an environment of both the places where users can play the game for stress relief or in a highly engaging & dopamine inducing game.
-• Adding visual and audio cues for the user as a means of feedback thereby tricking the brain to play for longer.</p>
-                    <a href="#" class="btn">Play Game</a>
+                    <p>• Researching and implementing the game's core and features based on the target audience, market size. </p>
+ <p>• Designing the visuals and game behaviour of the game itself. Enhancing user experience with subtle but smooth and integrated quality of life additions. </p>
+ <p>• Using colors and audio to evoke happy chemicals and adrenaline thereby creating an environment of both the places where users can play the game for stress relief or in a highly engaging & dopamine inducing game. </p>
+ <p>• Adding visual and audio cues for the user as a means of feedback thereby tricking the brain to play for longer.</p>
+                    <a href="https://abstractanuj.github.io/megh/" class="btn">Play Game</a>
                 </div>
                 <div class="portfolio-item reveal">
                     <h3>Visualizations</h3>
                     <p>A collection of my Math, Physics visualizations from Undergraduate , showcasing skills in creating dynamic and user-friendly experiences.</p>
-                    <a href="#" class="btn">View list of visualizations</a>
+                    <a href="https://abstractanuj.github.io/undergraduate/" class="btn">View list of visualizations</a>
                 </div>
             </div>
         </section>
