--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2 class="reveal">Packaging Technologist with a hint of Tech and Design</h2>
+                <h1 class="reveal">Packaging Technologist — Data, Tech and Design</h1>
                 <p class="reveal">Crafting Packaging solutions with precision and passion.</p>
             </div>
         </section>
 
         <section id="about" class="content-section">
-            <h3 class="reveal">"I have made projects for the fun of it"</h3>
+            <h2 class="reveal">I make projects for the fun of it</h3>
             <p class="reveal">
-                Creativity, for me, isn't just a profession—it's a compulsion. I thrive on bringing ideas to life, whether through the structured logic of code or the visual language of design.
+                I thrive on bringing ideas to life, whether through the structured logic or the visual language of design.
             </p>
         </section>
 
@@ -102,7 +102,7 @@
     </main>
 
     <footer class="main-footer">
-        <p>&copy; HEY. IT. LOOKS. LIKE. YOU. HAVE. REACHED. THE. END. :)</p>
+        <p>&copy; HEY. IT LOOKS LIKE YOU HAVE REACHED THE END :)</p>
     </footer>
 
 <script type="module" src="/index.tsx"></script>
