--- a/clicks/index.html
+++ b/clicks/index.html
@@ -84,7 +84,7 @@
     <div class="site-wrapper">
         <header class="photo-header">
             <a href="index.html" class="back-link">&larr; Back to Home</a>
-            <h1>Photography</h1>
+            <h1>Clicks</h1>
         </header>
 
         <main class="main-content">
@@ -110,7 +110,7 @@
         </main>
         
         <footer class="site-footer">
-            <p class="credits" style="margin-top: 6rem;">Designed & Built by Anuj Singh</p>
+            <p class="credits" style="margin-top: 6rem;">Shot and Color graded by Anuj</p>
         </footer>
     </div>
     
