--- a/clicks/index.html
+++ b/clicks/index.html
@@ -83,7 +83,7 @@
 
     <div class="site-wrapper">
         <header class="photo-header">
-            <a href="index.html" class="back-link">&larr; Back to Home</a>
+            <a href="https://abstractanuj.github.io/" class="back-link">&larr; Back to Home</a>
             <h1>Clicks</h1>
         </header>
 
