--- a/design/index.html
+++ b/design/index.html
@@ -170,7 +170,7 @@
 
     <div class="site-wrapper">
         <header class="design-header">
-            <a href="index.html" class="back-link">&larr; Back to Home</a>
+            <a href="https://abstractanuj.github.io/" class="back-link">&larr; Back to Home</a>
             <h1>CAD Designs & Dielines</h1>
         </header>
 
