--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="portfolio-container">
                     <ul class="portfolio-title-list">
                         <li data-project="autocad">
-                            <a href="design.html">AutoCAD Designs</a>
+                            <a href="design">AutoCAD Designs</a>
                         </li>
                         <li data-project="megh">
                              <a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh - Puzzle Game</a>
@@ -131,7 +131,7 @@
                              <a href="https://abstractanuj.github.io/undergraduate/" target="_blank" rel="noopener noreferrer">Math & Physics Viz</a>
                         </li>
                         <li data-project="photo">
-                             <a href="clicks.html">Photography</a>
+                             <a href="clicks">Photography</a>
                         </li>
                     </ul>
                     <div class="portfolio-image-collage">
