--- a/hn/index.html
+++ b/hn/index.html
@@ -6,6 +6,7 @@
     <title>The Hacker News Daily</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Sora:wght@400;600&display=swap" rel="stylesheet" preload>
 </head>
