--- a/megh/index.html
+++ b/megh/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="color-scheme" content="light">
+    <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
     <title>mēgh</title>
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='currentColor' d='M0 0v16h16V0H0zm14 14h-2v-4h-2v4H8v-2H6v2H2v-2h2v-2H2v-2h2V6H2V2h4v2h2V2h2v2h2v2h-2v2h2v4z'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
