--- a/writing/index.html
+++ b/writing/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
     <title>SAREPRNE — Anuj Singh</title>
     <link rel="stylesheet" href="writing.css">
 </head>
