--- a/clicks/index.html
+++ b/clicks/index.html
@@ -81,7 +81,7 @@
 <body>
     <div class="site-wrapper">
         <header class="photo-header">
-            <a href="index.html" class="back-link">&larr; Back to Home</a>
+            <a href="https://abstractanuj.github.io/index.html" class="back-link">&larr; Back to Home</a>
             <h1>Photography</h1>
         </header>
 
@@ -108,7 +108,7 @@
         </main>
         
         <footer class="site-footer">
-            <p class="credits" style="margin-top: 6rem;">Designed & Built by Anuj Singh</p>
+            <p class="credits" style="margin-top: 6rem;">Clicked Anuj :)</p>
         </footer>
     </div>
     
