--- a/design/index.html
+++ b/design/index.html
@@ -168,7 +168,7 @@
 <body>
     <div class="site-wrapper">
         <header class="design-header">
-            <a href="index.html" class="back-link">&larr; Back to Home</a>
+            <a href="https://abstractanuj.github.io/index.html" class="back-link">&larr; Back to Home</a>
             <h1>CAD Designs & Dielines</h1>
         </header>
 
@@ -269,7 +269,7 @@
         </main>
         
         <footer class="site-footer">
-            <p class="credits" style="margin-top: 6rem;">Designed & Built by Anuj Singh</p>
+            <p class="credits" style="margin-top: 6rem;">Designed & Built by Anuj</p>
         </footer>
     </div>
     
