--- a/writing/index.html
+++ b/writing/index.html
@@ -14,9 +14,10 @@
     <div class="site-wrapper">
         <header class="page-header">
             <h1>SAREPRNE</h1>
-            <p>A Collection of Thoughts on Science & Philosophy</p>
+            <p>IN the midst of chaos there is opportunity</p>
+            <p>A Collection of Thoughts on Design/Packaging and everything else</p>
         </header>
-        <a href="../index.html" class="back-link">&larr; Back to Portfolio</a>
+        <a href="https://abstractanuj.github.io/index.html" class="back-link">&larr; Back to Portfolio</a>
         <main>
             <div id="newspaper-grid" class="newspaper-grid">
                 <!-- Posts will be injected here by writing.js -->
