--- a/writing/index.html
+++ b/writing/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
-    <title>SAREPRNE — Anuj Singh</title>
+    <title>Anuj's Blog</title>
     <link rel="stylesheet" href="writing.css">
 </head>
 <body>
