--- a/clicks/index.html
+++ b/clicks/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography — Anuj Singh</title>
+    <title>Photographs by Anuj</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
