--- a/design/index.html
+++ b/design/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAD Designs — Anuj Singh</title>
+    <title>Designs built by Anuj</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
