Update and rename consciousness.html to anuga.html

--- a/writing/anuga.html
+++ b/writing/anuga.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On the Nature of Consciousness — SAREPRNE</title>
+    <title>My experience at Anuga FoodTec</title>
     <link rel="stylesheet" href="writing.css">
 </head>
 <body>
@@ -14,13 +14,13 @@
         <a href="index.html" class="back-link" style="margin-top: 2rem;">&larr; All Writings</a>
         <main class="post-page-container">
             <header class="post-page-header">
-                <h1>On the Nature of Consciousness</h1>
+                <h1>My experience at Anuga FoodTec '24</h1>
                 <div class="post-page-meta">
-                    <span>June 23, 2024</span> &bull; <span>#consciousness, #philosophy, #neuroscience</span>
+                    <span>September 05, 2024</span> &bull; <span>#meta, #packaging</span>
                 </div>
             </header>
             <article class="post-page-content">
-                <p>Consciousness is one of the most mysterious phenomena in the universe. It is the state of being aware of one's own existence and of the world around one. But what is consciousness, and where does it come from? There is no single answer to this question, but there are a number of different theories that have been proposed.</p><p>One theory is that consciousness is a product of the brain. This theory is supported by the fact that consciousness is affected by brain injuries and by drugs that affect the brain. Another theory is that consciousness is a fundamental property of the universe, like space and time. This theory is supported by the fact that consciousness seems to be present in all living things, from bacteria to humans.</p><p>The nature of consciousness is a mystery that may never be fully solved. However, by studying consciousness, we can learn more about ourselves and about the universe we live in.</p>
+            <div>• Interacted with the representative of <b>Dot Graphics LLP</b> on topics such as paper, print, color, and design.<br></div><div><br></div><div>• Saw <b>Cybernetic's</b> machines in action, including receiving and feeding, as well as packaging automation</div><div><br></div><div>• Asked questions and cleared doubts with <b>Fibre Foils Pvt Ltd</b> about using paper as a packaging material. They use a special type of paper and multiple layers of the same paper to create cylindrical containers of all sizes. I was impressed by the durability and printability of the paper-made containers. These containers can be used for primary, secondary, and tertiary packaging, depending on the product. Some examples of their usage include large drums for storing and transporting wires, selling baked cookies, and storing dry fruits.&nbsp;</div><div><br></div><div>• Saw <b>SM Food Engineering'</b>s fully automated machinery in action, producing potato chips.&nbsp;</div><div><br></div><div>• Visited the stall of <b>Totai</b>, a Japan-based company specializing in packaging and printing. As a gift, they offered two ice gel packets.&nbsp;</div><div><br></div><div>• <b>Asked questions</b> to a Taiwan-based company about why they seal a larger area of their shampoo packets. The representative explained that it's for safety. They ship the shampoo packets in bulk, and they are stacked on top of each other inside a box. To prevent leakage, they seal a larger area of the plastic.<i>&nbsp;</i></div><div><br></div><div>• Received magazines from Packaging <i>South Asia, IndiFoodBev, and Indian Printer and Publisher<u>.</u></i></div><div><br></div>   
             </article>
         </main>
     </div>
