--- a/writing/free-will.html
+++ b/writing/free-will.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On the Problem of Free Will — SAREPRNE</title>
+    <title>Knox mdm is a joke (⁠ﾉ⁠◕⁠ヮ⁠◕⁠)⁠ﾉ⁠*⁠.⁠✧</title>
     <link rel="stylesheet" href="writing.css">
 </head>
 <body>
@@ -14,13 +14,13 @@
         <a href="index.html" class="back-link" style="margin-top: 2rem;">&larr; All Writings</a>
         <main class="post-page-container">
             <header class="post-page-header">
-                <h1>On the Problem of Free Will</h1>
+                <h1>How I managed to bypas Samsung's cruelty</h1>
                 <div class="post-page-meta">
-                    <span>June 30, 2024</span> &bull; <span>#philosophy, #free will, #determinism</span>
+                    <span>Mar 01, 2024</span> &bull; <span>#diy, #tech</span>
                 </div>
             </header>
             <article class="post-page-content">
-                <p>The problem of free will is the question of whether or not we have the ability to make our own choices. It is a question that has been debated by philosophers for centuries, and there is no easy answer. There are a number of different arguments that can be made for and against the existence of free will. For example, some people argue that we have free will because we are able to make choices that are not determined by our past experiences or by our genetic makeup.</p><p>Others argue that we do not have free will because our choices are ultimately determined by the laws of physics. The problem of free will is a complex one, and there is no single right answer. However, by thinking about the problem of free will, we can learn more about ourselves and about the nature of reality.</p>
+            <div><b>What</b></div><div>¹Partially unlocked Samsung A04E restricted features. ²Fully restrict any data sent to the government.</div><div><br /></div><div><b>When</b></div><div><i>Device given</i>: 26/02/2024</div><div><i>Pwned</i>: 27/02/2024</div><div><br /></div><div><b>Why</b></div><div>I did it because I wanted to <i>challenge myself </i>and Samsung's security.</div><div><br /></div><div><b>How</b></div><div><i><u>Block</u></i>: ¹Knox manger, ²Knox enrollment, ³Configuration service, ⁴mdm and ⁵Android system's internet access through a firewall during FRP bypass.</div><div><i><u>Install</u></i>: ¹Smart Dock, ²Rethink DNS, ³Adguard premium.</div><div><i><u>Enable</u></i>: ¹Samsung mode and routines, ²Gesture navigation, ³Different theme.</div><div><br /></div><div><b>What's not working</b></div><div>¹USB debugging, ²[Update]: wireless debugging works with developer tiles, ³System (Android &amp; Security) updates, ⁴PlayStore, ⁵Home button, ⁶Recents button.</div><div><br /></div><div><b>Is it worth it</b>?</div><div>Absolutely. ¹The device's specifications are rather good for it's price (and add the fact that it's free). ²You are also not giving any data to the government that they want so desperately (to control you).</div><div><br /></div><div><b>Closing</b></div><div>¹Samsung's Knox manager and mdm is a joke.</div><div>²I already have a better phone than this so I'll give this one to someone.</div><div><br /></div><div><b>Extra</b></div><div>If you ever disabled your stock launcher with ADB and rebooted only to get stuck on boot logo then just reboot again but this time in safe mode. *wink*</div> 
             </article>
         </main>
     </div>
