--- a/writing/index.html
+++ b/writing/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://files.catbox.moe/lhcxja.ico" type="image/x-icon">
-    <title>Anuj's Blog</title>
+    <title>Anuj writes</title>
     <link rel="stylesheet" href="writing.css">
 </head>
 <body>
@@ -14,7 +14,6 @@
     <div class="site-wrapper">
         <header class="page-header">
             <h1>SAREPRNE</h1>
-            <p>IN the midst of chaos there is opportunity</p>
             <p>A Collection of Thoughts on Design/Packaging and everything else</p>
         </header>
         <a href="https://abstractanuj.github.io/index.html" class="back-link">&larr; Back to Portfolio</a>
