--- a/writing/atom.html
+++ b/writing/atom.html
@@ -25,7 +25,7 @@
         
                 <h3>1. Electrons</h3>
                 <p><em>Electrons</em> are negatively charged particles that lie in an orbital around the nucleus, in their respective "shells".</p>
-                <p><em>Note:</em> Orbit is different from an orbital. An orbit is a pathway defined mathematically. Whereas an orbital is a 3-Dimensional region (let's call it an electron cloud) around the nucleus within which we can find elections 90% of the time. It's more like an abstract probability space than an actual 3D sphere.</p>
+                <p><em>Note:</em> Orbit is different from an orbital. An orbit is a pathway defined mathematically. Whereas an orbital is a 3-Dimensional region (let's call it an electron cloud) around the nucleus within which we can find electrons 90% of the time. It's more like an abstract probability space than an actual 3D sphere.</p>
                 
                 <h4>Why don't electrons fall into the nucleus?</h4>
                 <p>Since they are negatively charged and protons are positively charged, they must attract each other, and therefore electrons must fall into the nucleus. What's stopping them? This could have been the case if the electrons were <em>orbiting</em> around the nucleus.</p>
