--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             
             <section id="experience" class="content-section reveal">
                 <h2 class="section-heading"><span class="section-number">02.</span>Projects & Interests</h2>
+                <p>I'm a fresher. To make myself adept for the Industry I have made Projects on Design and Packaging, Undertaken courses on Food Packaging, Logistics, Supply chain and Operations Research, Design Thinking all from top IIts such as IITB, IITR, IITKGP.</p>
+                <p>As a fresher I am seeking to practice and apply these skills to real world challenges. Whilst bringing fresh perspective and creative ideas to the table.</p>
                 <div class="project-list">
                     <div class="project-item">
                         <div class="project-content">
