--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <p class="intro-text">I'm</p>
                     <h1 class="logo">Anuj Singh</h1>
                 </div>
-                <h2 class="tagline">Packaging Technologist & Creative Problem Solver</h2>
-                <p class="summary">I build solutions for packaging, blending technology with design whilst paying attention to the smallest of details.</p>
+                <h2 class="tagline">Packaging Technologist</h2>
+                <p class="summary">I build solutions for Packaging, blending technology with design whilst paying attention to the smallest of details.</p>
             </div>
             
             <nav class="main-nav">
@@ -43,7 +43,7 @@
         <main class="main-content">
             <section id="about" class="content-section reveal">
                 <h2 class="section-heading"><span class="section-number">01.</span>About Me</h2>
-                <p>Packaging Technologist who thrives on bringing ideas to life, whether through the structured logic of data or the visual language of design. I love my work, always thinking new ways to craft solutions.</p>
+                <p>Packaging Technologist who thrives on bringing ideas to life, whether through structured logic and data or the visual language of design. I love what I do, always thinking of new ways to tackle problems.</p>
             </section>
             
             <section id="experience" class="content-section reveal">
