--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <h4>Other Projects</h4>
                             <ul class="etc-links">
                                 <li><a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh - Puzzle Game</a></li>
-                                <li><a href="#" data-inline-content="clicks.html" data-inline-target="#footer-inline-container">Photography</a></li>
+                                <li><a href="https://github.com/abstractanuj/clicks" data-inline-content="clicks.html" data-inline-target="#footer-inline-container">Photography</a></li>
                                 <li><a href="https://abstractanuj.github.io/hn" target="_blank" rel="noopener noreferrer">HN Clone</a></li>
                                 <li><a href="https://abstractanuj.github.io/undergraduate/" target="_blank" rel="noopener noreferrer">Math & Physics Viz</a></li>
                             </ul>
