--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                         <div class="portfolio-grid-new">
                             <div role="button" tabindex="0" class="portfolio-item-new" data-project-id="dispenser-carton">
                                 <span class="portfolio-item-year">2025</span>
-                                <h3 class="portfolio-item-title">Dispenser Carton for Mints</h3>
+                                <h3 class="portfolio-item-title">Trapezoidal Prism for Juices</h3>
                                 <div class="portfolio-item-tags">
                                     <span>Dieline</span>
-                                    <span>Graphic Design</span>
+                                    <spand>Prototype</span>
                                 </div>
                                 <div class="portfolio-item-arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
@@ -119,10 +119,9 @@
                             </div>
                              <div role="button" tabindex="0" class="portfolio-item-new" data-project-id="hexagonal-carton">
                                 <span class="portfolio-item-year">2025</span>
-                                <h3 class="portfolio-item-title">Hexagonal Carton</h3>
+                                <h3 class="portfolio-item-title">Double Juices Tetrapak</h3>
                                 <div class="portfolio-item-tags">
-                                    <span>Dieline</span>
-                                    <span>Prototyping</span>
+                                    <span>Prototype</span>
                                 </div>
                                  <div class="portfolio-item-arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
@@ -130,10 +129,9 @@
                             </div>
                              <div role="button" tabindex="0" class="portfolio-item-new" data-project-id="cosmetic-box">
                                 <span class="portfolio-item-year">2025</span>
-                                <h3 class="portfolio-item-title">Cosmetic Product Box</h3>
+                                <h3 class="portfolio-item-title">Hexagonal Juice Pak</h3>
                                 <div class="portfolio-item-tags">
                                     <span>Dieline</span>
-                                    <span>Luxury Packaging</span>
                                 </div>
                                  <div class="portfolio-item-arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
@@ -164,7 +162,6 @@
                             <h4>Other Projects</h4>
                             <ul class="etc-links">
                                 <li><a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh - Puzzle Game</a></li>
-                                <li><a href="https://github.com/abstractanuj/clicks" data-inline-content="clicks.html" data-inline-target="#footer-inline-container">Photography</a></li>
                                 <li><a href="https://abstractanuj.github.io/hn" target="_blank" rel="noopener noreferrer">HN Clone</a></li>
                                 <li><a href="https://abstractanuj.github.io/undergraduate/" target="_blank" rel="noopener noreferrer">Math & Physics Viz</a></li>
                             </ul>
