--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="hero-section">
                 <p class="hero-greeting" id="hero-greeting"></p>
                 <h1 class="hero-title">Anuj Singh</h1>
-                <h2 class="hero-tagline">IIP '26 ● Packaging Design ● Optimizations ● Statistics</h2>
+                <h2 class="hero-tagline">IIP '26 ● Packaging Design ● Optimizations</h2>
 
                 <nav class="hero-nav">
                      <ul>
@@ -57,8 +57,8 @@
                         <h2 class="section-heading"><span class="section-number">02.</span>Experience</h2>
                     </div>
                     <div class="section-content">
-                        <p class="section-intro styled-text-block">To make myself <em>adept for the Industry</em> I have made <span class="text-highlight">Projects on Design and Packaging</span>, undertaken courses on Food Packaging, Logistics, and more, all from <span class="text-highlight accent">top IIts</span> such as IITB, IITR, & IITKGP.</p>
-                        <p class="styled-text-block">As a fresher I am seeking to practice and apply these skills to <span class="text-highlight">real world challenges</span> and create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
+                        <p class="section-intro styled-text-block"></em> I have made <span class="text-highlight">Projects on Design and Packaging</span></p>
+                        <p class="styled-text-block">As a fresher I aim to gain meaningful hands-on and professional exposure. Create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
                     </div>
                 </section>
 
