--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="hero-section">
                 <p class="hero-greeting" id="hero-greeting"></p>
                 <h1 class="hero-title">Anuj Singh</h1>
-                <h2 class="hero-tagline">IIP '26 ● Packaging Design ● Optimizations</h2>
+                <h2 class="hero-tagline">Design ● Testing techniques ● Operations Research </h2>
 
                 <nav class="hero-nav">
                      <ul>
