--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                         <div class="etc-column">
                             <h4>Other Projects</h4>
                             <ul class="etc-links">
-                                <li><a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh - Puzzle Game</a></li>
-                                <li><a href="https://abstractanuj.github.io/hn" target="_blank" rel="noopener noreferrer">HN Clone</a></li>
-                                <li><a href="https://abstractanuj.github.io/undergraduate/" target="_blank" rel="noopener noreferrer">Math & Physics Viz</a></li>
+                                <li><a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh</a></li>
+                                <li><a href="https://abstractanuj.github.io/hn" target="_blank" rel="noopener noreferrer">The HN Times</a></li>
+                                <li><a href="https://abstractanuj.github.io/graph/" target="_blank" rel="noopener noreferrer">Chaukhat</a></li>
                             </ul>
                         </div>
                     </div>
