--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h2 class="section-heading"><span class="section-number">02.</span>Experience</h2>
                     </div>
                     <div class="section-content">
-                        <p class="section-intro styled-text-block"></em> I have made <span class="text-highlight">Projects on Design and Packaging</span></p>
+                        <p class="section-intro styled-text-block"></em>Intern at Pidilite Packaging R&D. I have made <span class="text-highlight">Projects on Design and Packaging</span></p>
                         <p class="styled-text-block">As a fresher I aim to gain meaningful hands-on and professional exposure. Create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
                     </div>
                 </section>
