--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h2 class="section-heading"><span class="section-number">02.</span>Experience</h2>
                     </div>
                     <div class="section-content">
-                        <p class="section-intro styled-text-block"></em>Intern at Pidilite Packaging R&D. I have made <span class="text-highlight">Projects on Design and Packaging</span></p>
+                        <p class="section-intro styled-text-block"></em>Intern at Pidilite Packaging R&D. I have made</p>
                         <p class="styled-text-block">As a fresher I aim to gain meaningful hands-on and professional exposure. Create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
                     </div>
                 </section>
@@ -110,7 +110,7 @@
                                 <h3 class="portfolio-item-title">Trapezoidal Prism for Juices</h3>
                                 <div class="portfolio-item-tags">
                                     <span>Dieline</span>
-                                    <spand>Prototype</span>
+                                    <span>Prototype</span>
                                 </div>
                                 <div class="portfolio-item-arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
