--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="hero-nav">
                      <ul>
                         <li><a href="#about" class="nav-link"><span class="nav-number">01</span>About</a></li>
-                        <li><a href="#experience" class="nav-link"><span class="nav-number">02</span>Experience</a></li>
+                        <li><a href="#moto" class="nav-link"><span class="nav-number">02</span>Moto</a></li>
                         <li><a href="#skills" class="nav-link"><span class="nav-number">03</span>Toolkit</a></li>
                         <li><a href="#portfolio" class="nav-link"><span class="nav-number">04</span>Portfolio</a></li>
                         <li><a href="#contact" class="nav-link"><span class="nav-number">05</span>Etc.</a></li>
@@ -51,13 +51,12 @@
                     </div>
                 </section>
                 
-                <section id="experience" class="content-section reveal">
+                <section id="moto" class="content-section reveal">
                      <div class="section-header">
-                        <h2 class="section-heading"><span class="section-number">02.</span>Experience</h2>
+                        <h2 class="section-heading"><span class="section-number">02.</span>Moto</h2>
                     </div>
                     <div class="section-content">
-                        <p class="section-intro styled-text-block"></em>Intern at Pidilite Packaging R&D.</p>
-                        <p class="styled-text-block">As a fresher I aim to gain meaningful hands-on and professional exposure. Create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
+                        <p class="styled-text-block">I aim to gain meaningful hands-on and professional exposure. Create vibrant solutions, whilst bringing a <span class="text-highlight">fresh perspective</span> and creative ideas to the table.</p>
                     </div>
                 </section>
 
