--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="section-content">
                          <p class="section-intro styled-text-block">
-                            I'm a <span class="text-highlight accent">Packaging Technologist</span>, currently an Intern at Pidilite packaging R&D. I thrive on bringing <em>ideas to life</em> <img src="https://raw.githubusercontent.com/abstractanuj/abstractanuj.github.io/988766ca04ede9fd43a98fc8219c0621137d5f78/img/life.png" alt="idea icon" class="inline-icon">, whether through structured logic and data or the visual language of design.
+                            I'm a <span class="text-highlight accent">Packaging Technologist</span> currently an Intern at Pidilite R&D. I thrive on bringing <em>ideas to life</em> <img src="https://raw.githubusercontent.com/abstractanuj/abstractanuj.github.io/988766ca04ede9fd43a98fc8219c0621137d5f78/img/life.png" alt="idea icon" class="inline-icon">, whether through structured logic and data or the visual language of design.
                         </p>
                         <p class="styled-text-block">
                            I first fell in love with Packaging when I realized it had the power to play with the consumer's perseption. While directly affecting a brand's growth. As someone passionate about design thinking and having a background in Mathematics & Statistics, I see Packaging as a powerful means of cost minization and profit maximization. I can make a real difference with my unique skills set of Package Design, <span class="text-highlight accent">Logistics & Supply Chain Optimizations</span>, or <span class="text-highlight">Statistical QC</span>.
